# AEDTP3Cod45

./: .gitignore  AED3TP3.ipynb  AED3TP3Gon.cbp  AED3TP3Gon.depend  AED3TP3Gon.layout  CMakeLists.txt  COSAS PARA ESCRIBIR EN EL INFORME.txt  Li_21.vrp  Li_22.vrp  Li_23.vrp  Li_24.vrp  Li_25.vrp  Li_26.vrp  Li_27.vrp  Li_28.vrp  Li_29.vrp  Li_30.vrp  Li_31.vrp  Li_32.vrp  SimAn.cpp  SimAn.h  SimAn.txt  Untitled.ipynb  X-n548-k50.vrp  X-n655-k131.vrp  X-n749-k98.vrp  X-n856-k95.vrp  X-n957-k87.vrp  caminoDiego-B-n31-k5.txt  caminoDiego-B-n34-k5.txt  caminoDiego-B-n35-k5.txt  caminoDiego-B-n44-k7.txt  caminoDiego-B-n45-k5.txt  caminoDiego-B-n50-k7.txt  caminoDiego-B-n63-k10.txt  caminoDiego-B-n67-k10.txt  caminoDiego-B-n78-k10.txt  graficador.py  graficadorViejo.py  input.txt  (+20 more)
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
CODIGOENTREGA/: basics3.hpp  siman.cpp  sweep.cpp  sweep.hpp
SETBIGN/: X-n1001-k43.vrp  X-n513-k21.vrp  X-n613-k62.vrp  X-n716-k35.vrp  X-n819-k171.vrp  X-n916-k207.vrp
backup/: basics3.cpp  basics3.hpp  cluster.cpp  main.cpp  siman.cpp  siman.hpp  sweep.cpp
exp/: inputCPPparaOtroExp.txt  inputCPPparaOtroExp2.txt
exp1/: EXCHANGE.txt  SWAP.txt  SWEEP.txt
grafos/: output.csv
include/: Customer.h  Respuesta.h  Route.h  System.h  basics3.h  basics3.hpp  clark_wright.h  cluster.h  siman.h  siman.hpp  sweep.hpp
salida/: SIMAN-ALTSWEEP-SET-B.csv  SIMAN-SAVINGS-SET-A.csv  SIMAN-SAVINGS-SET-B.csv  SIMAN-SWEEP-SET-A.csv  SIMAN-SWEEP-SET-B.csv  SIMAN-SWEEP-SET-X.csv  SIMAN-VMC-SET-A.csv  SIMAN-VMC-SET-B.csv  SIMAN.csv  clusteringSWEEP - BACKUP.csv  (+20 more)
(+230 files in other folders)
